--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,18 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
+			</dependency>
+<!--			<dependency>-->
+<!--				<groupId>org.mockito</groupId>-->
+<!--				<artifactId>mockito-all</artifactId>-->
+<!--				<version>1.10.19</version>-->
+<!--				<scope>test</scope>-->
+<!--			</dependency>-->
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
